--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -23,12 +23,14 @@
             <h3 class="card-title text-center mb-3">
                 {{ post.title|default:"(No Title)" }}
             </h3>
-
+            <!-- Image -->
             {% if post.image %}
             <div class="image-frame mt-3">
                 <img src="{{ post.image.url }}" alt="Image for {{ post.content }}" class="img-fluid">
             </div>
             {% endif %}
+
+            <!-- text -->
             <p class="card-text">{{ post.content }}</p>
 
             <!-- Sizes Section -->
@@ -70,21 +72,41 @@
                 </div>
             </div>
 
+            <!-- Weight Section -->
+            <div class="d-flex align-items-center mt-3">
+                <strong class="me-2" style="width: 60px;">Weight</strong>
+                <strong class="me-2" style="width: 40px;">[g]:</strong>
+                {% if post.weight %}
+                    <button class="btn btn-outline-primary btn-sm" style="width: 100px;">{{ post.weight|default:"Not specified" }}</button>
+                {% else %}
+                    <span class="text-muted">Not specified</span>
+                {% endif %}
+            </div>
 
-            <!-- Display tags as buttons if available -->
-            {% if post.tags.all %}
-                <p class="mt-3"><strong>Tags:</strong>
+
+            
+
+
+
+            <div class="d-flex align-items-center mt-3">
+                <strong class="me-2" tyle="width: 60px;">Tags:</strong> 
+                <strong class="me-2" style="width: 40px; margin-left: 70px;">:</strong>
                     {% for tag in post.tags.all %}
                         <button type="button" class="btn btn-outline-primary btn-sm me-2">
                             <a href="{% url 'tag_detail' tag.name %}" style="text-decoration: none; color: inherit;">{{ tag.name }}</a>
                         </button>
                     {% endfor %}
                 </p>
-            {% endif %}
+
+
+            </div>
+            <!-- Display tags as buttons if available -->
+
 
             {% if post.split_colors %}
-                <div class="mt-3">
-                    <strong>Colors:</strong>
+                <div class="d-flex align-items-center mt-3">
+                    <strong class="me-2" style="width: 60px;">Colors</strong>
+                    <strong class="me-2" style="width: 40px; margin-left: 50px;">:</strong>
                     {% for color in post.split_colors %}
                         <button class="btn btn-outline-primary me-2 mb-2" disabled>{{ color }}</button>
                     {% endfor %}
